fix(launcher): update step indicator and visual alignment

--- a/src/assets/stylesheets/shared/_labels.less
+++ b/src/assets/stylesheets/shared/_labels.less
@@ -8,4 +8,7 @@
   position: absolute;
   top: 0;
   right: 0;
+  i {
+    color: @color-pf-white;
+  }
 }
